meta description added

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    
     <title>Adrian Kervin Portfolio</title>
+    <meta name="description" content="Portfolio de Adrian Kervin. Front-end Developer. Proyectos realizados principalmente en React y Javascript.">
   </head>
   <body>
     <div id="root"></div>
